# wamr-poc

./: .gitignore  .gitmodules  README.md
memory_usage/: .gitignore  CMakeLists.txt
memory_usage/src/: hello-world.c  main.c  noop.c  nth_prime.c  slugify.c
memory_usage/wasm-apps/: CMakeLists.txt  article.wasm  dummy-module.wat  dummy_run.wat  hello-world.c  hello-world.wasm  hello-world.wat  mA.c  simple-global.wat  slugify.opt.wasm  test-without-main.c  test-without-main.wasm  test.wasm  test2.opt.wasm
